Fixed extra padding on thumbnail bar

--- a/css/default.css
+++ b/css/default.css
@@ -412,8 +412,6 @@ img {
     height:19px;
     text-align:center;
     padding-bottom:5px;
-    padding-left:5px;
-    padding-right:5px;
     margin-left:auto;
     margin-right:auto;
     margin-bottom:5px;
